--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -13,12 +13,12 @@ kumuluzee:
     username: postgres
     password: admin
     max-pool-size: 20
-  #config:
-   # etcd:
-    #  hosts: http://192.168.99.100:2379
-  #discovery:
-   # etcd:
-   #   hosts: http://192.168.99.100:2379
-#app-properties:
- # external-services:
- #   enabled: false
+  config:
+    etcd:
+      hosts: http://192.168.99.100:2379
+  discovery:
+    etcd:
+      hosts: http://192.168.99.100:2379
+app-properties:
+  external-services:
+    enabled: false
