--- a/kubernetes/profile-deployment.yaml
+++ b/kubernetes/profile-deployment.yaml
@@ -18,6 +18,10 @@ spec:
         env:
         - name: KUMULUZEE_DISCOVERY_CLUSTER
           value: gcloud
+        - name: KUMULUZEE_DISCOVERY_ETCD_HOSTS
+          value: http://etcd:2379
+        - name: KUMULUZEE_CONFIG_ETCD_HOSTS
+          value: http://etcd:2379
         - name: KUMULUZEE_SERVER_BASEURL
           value: http://172.21.134.224:31104
         - name: KUMULUZEE_DATASOURCES0_PASSWORD
