--- a/api/pom.xml
+++ b/api/pom.xml
@@ -58,6 +58,12 @@
             <version>2.0-PFD2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0-PFD2</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
