--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,10 @@
     <kumuluzee-rest.version>1.2.3</kumuluzee-rest.version>
     <kumuluzee-config.version>1.1.0</kumuluzee-config.version>
     <kumuluzee-discovery.version>1.1.0</kumuluzee-discovery.version>
-
+      <kumuluzee-health.version>1.0.1</kumuluzee-health.version>
+      <kumuluzee-metrics.version>1.1.1</kumuluzee-metrics.version>
+      <kumuluzee-logs.version>1.3.0</kumuluzee-logs.version>
+      <kumuluzee-fault-tolerance.version>1.0.1</kumuluzee-fault-tolerance.version>
     <postgresql.version>42.2.5</postgresql.version>
   </properties>
 
@@ -99,7 +102,32 @@
           </exclusion>
         </exclusions>
       </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+            <version>${kumuluzee-metrics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.health</groupId>
+            <artifactId>kumuluzee-health</artifactId>
+            <version>${kumuluzee-health.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>kumuluzee-logs-log4j2</artifactId>
+            <groupId>com.kumuluz.ee.logs</groupId>
+            <version>${kumuluzee-logs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.fault.tolerance</groupId>
+            <artifactId>kumuluzee-fault-tolerance-hystrix</artifactId>
+            <version>${kumuluzee-fault-tolerance.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
