--- a/kubernetes/profile-deployment.yaml
+++ b/kubernetes/profile-deployment.yaml
@@ -37,6 +37,12 @@ spec:
         - containerPort: 8081
           name: server
           protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: server
+          initialDelaySeconds: 20
+          periodSeconds: 3
 ---
 
 apiVersion: v1
