--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -25,5 +25,5 @@ kumuluzee:
       hosts: http://192.168.99.100:2379
 app-properties:
   external-services:
-    enabled: true
-  healthy: true
+    enabled: false
+  healthy: false
