--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -25,7 +25,7 @@ kumuluzee:
       hosts: http://192.168.99.100:2379
   metrics:
     web-instrumentation:
-    - name: customers-endpoint
+    - name: profile-endpoint
       url-pattern: /v1/profile/*
 app-properties:
   external-services:
