--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -27,6 +27,26 @@ kumuluzee:
     web-instrumentation:
     - name: profile-endpoint
       url-pattern: /v1/profile/*
+  logs:
+    config-file: '<?xml version="1.0" encoding="UTF-8"?>
+                      <Configuration name="profile">
+                          <Appenders>
+                              <Console name="console" target="SYSTEM_OUT">
+                                  <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
+                              </Console>
+                              <Socket name="logstash" host="31cf5f91-1968-4614-9342-2bd9b197d6a4-ls.logit.io"
+                              port="19821" protocol="tcp">
+                                  <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
+                              </Socket>
+                          </Appenders>
+                          <Loggers>
+                              <!-- Default logger -->
+                              <Root level="all">
+                                  <AppenderRef ref="console" level="info"/>
+                                  <AppenderRef ref="logstash" level="trace"/>
+                              </Root>
+                          </Loggers>
+                      </Configuration>'
 app-properties:
   external-services:
     enabled: true
